--- a/REACT-BASIC/src/dept.css
+++ b/REACT-BASIC/src/dept.css
@@ -1,4 +1,18 @@
 .deptlist-footer {
-    display: flex;
-    flex-direction: row-reverse;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.page-header {
+  padding: 20px 0px;
+}
+
+.dept-header {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 20px;
+}
+
+.dept-detail {
+  display: flex;
 }
